2-03-2025
- fix https://gitlab.freedesktop.org/xorg/xserver/-/issues/899 on my sway multi monitor setup


2-02-2025
- Finally added the polkit service to all desktops
- new HM service polkit-gnome. Allows apps such as OBS studio to prompt for sudo without a terminal
- Neovim update, will now show the current line number of the cursor instead of 0.


1-30-2025
- update changelog


1-29-2025
- add posix documentation to workstation
- add Mod + w to open rofi -show window to sway & i3
- change keybind for tabbed layout in sway and i3 from Mod + w to Mod + t
- sway and i3 config are now reloaded with Mod + r instead of Mod + Shift + r


1-24-2025
- garth turned to dust so using tater as main laptop
- fix swww to use xrgb due to a very weird bug on tater
- add r2modman to home manager


1-12-2025
- flatpak module
- mini icons for neovim
- simple benchmark app in home-manager
- configred man to open in neovim
- update flake


1-10-2025
- rebuild cypher
- remove dnsmasq
- wg1 network in progress
- replace gscan2pdf with simple scan as gscan2pdf is broken currently


1-05-2025
- reinstall garth
- figured out luks encryption with interactive password
- fix fix bug with userjs having wrong contents for shyfox theme 


1-04-2025
- remove custom ghostty option in favor of HM
- add rolling hyprland input
- update swww and ghostty


1-03-2025
- add ghex to hm


12-30-2024
- hackfix for swww memory leak with gifs and slideshow
- swww daemon will be restarted at the end of the slideshow


12-27-2024
- edit kanshi to not use the deprecated option
- add zsa keyboard module (includes the keymapp application)


12-24-2024
- add kanshi configuration for cypher


12-23-2024
- add clang to neovim


12-22-2024
- successfully deployed home-manager on arch
- add standlone home-manager documentation to readme


12-21-2024
- blink.cmp for nvim
- swww mirror of fehbg for wayland

12-20-2024
- created a wallpaper daemon for xorg using feh.