@@ -1,6 +1,11 @@
 { pkgs, config, lib, desktop, scripts, ... }:
 let
   inherit (lib) getExe;
+  msgcmd =
+    if (desktop == "i3") then
+      "i3msg"
+    else
+      "swaymsg";
   mod =
     if (desktop == "i3") then
       config.xsession.windowManager.i3.config.modifier
@@ -46,6 +51,7 @@ in
   # Swap with window to the left
   "${mod}+Shift+h" = ''mark --add "swapee"; focus left; swap container with mark "swapee"; focus left; unmark "swapee"'';
   "${mod}+Shift+Left" = ''mark --add "swapee"; focus left; swap container with mark "swapee"; focus left; unmark "swapee"'';
+
   # Swap with window to the right
   "${mod}+Shift+l" = ''mark --add "swapee"; focus right; swap container with mark "swapee"; focus right; unmark "swapee"'';
   "${mod}+Shift+Right" = ''mark --add "swapee"; focus right; swap container with mark "swapee"; focus right; unmark "swapee"'';
@@ -55,14 +61,18 @@ in
   # Swap with window below
   "${mod}+Shift+j" = ''mark --add "swapee"; focus down; swap container with mark "swapee"; focus down; unmark "swapee"'';
   "${mod}+Shift+Down" = ''mark --add "swapee"; focus down; swap container with mark "swapee"; focus down; unmark "swapee"'';
+
   # split in horizontal orientation
-  # "${mod}+h" = "split h";
+  "${mod}+n" = "split h";
 
   #split in vertical orientation
-  # "${mod}+v" = "split v";
+  "${mod}+v" = "split v";
 
   # enter fullscreen mode for the focused container
   "${mod}+f" = "fullscreen toggle";
+
+  # enter resize mode
+  "${mod}+r" = "mode resize";
 
   # change container layout (stacked, tabbed, toggle split)
   "${mod}+s" = "layout stacking";
@@ -102,7 +112,7 @@ in
   "${mod}+Shift+9" = "move container to workspace number 9";
   "${mod}+Shift+0" = "move container to workspace number 10";
 
-  "${mod}+r" =
+  "${mod}+Shift+r" =
     # why are these different?
     if (desktop == "i3") then
       "restart"
